--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -45,46 +45,27 @@
 
     <div class="general">
         <div class="left-side disc">
+
             <div class="left-side">
                 <a href="">Membership</a>
                 <a href="">News</a>
+
                 <a href="">Events</a>
             </div>
 
-            <table>
-                <caption>Table 1: Account Feature Comparison</caption>
-                <thead>
-                    <tr>
-                        <th colspan="4" scope="colgroup">Members Benefits</th>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th scope="col">Bronze</th>
-                        <th scope="col">Silver</th>
-                        <th>Gold</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Publicity</td>
-                        <td>✔️</td>
-                        <td>✔️</td>
-                        <td>✔️</td>
-                    </tr>
-                    <tr>
-                        <td>Global Manager</td>
-                        <td>❌</td>
-                        <td>✔️</td>
-                        <td>✔️</td>
-                    </tr>
-                    <tr>
-                        <td>International Partner</td>
-                        <td>❌</td>
-                        <td>❌</td>
-                        <td>✔️</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="head-nav">
+                <h1>Application submitted successfully</h1>
+                <p>Haiti is a market economy with low <br>
+                    labor costs and a major trading<br>
+                    partner in the United States. Haiti<br>
+                    has preferential access to the U.S.<br>
+                    market through the Hemispheric<br>
+                    Opportunity though Partnership (HOPE)<br>
+                    and the Economic Lift Program <br>
+                    Encouragement Acts (HELP), which provide<br>
+                    duty-free access to the U.S. market for a<br>
+                    range of textile products.</p>
+            </div>
 
             <p><span class="label">Number Of visits: </span>
                 <span class="visits"></span><br>
