--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                     <a href="https://chrispinsteve.github.io/wdd230/week04/tablebuilt.html" target="blank">Table Built</a>
                     <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank">Form Start</a>
                 </li>
+
+                <li>
+                    Week 05: <a href="https://codepen.io/Chrispinsteve/pen/GRaZzbv" target="blank">Psedo-Element</a><br>
+                    <a href="https://chrispinsteve.github.io/wdd230/week04/tablebuilt.html" target="blank"></a>
+                    <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank"></a>
+                </li>
             </ul>
         </section>
 
