--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <li>
                     Week 05: <a href="https://codepen.io/Chrispinsteve/pen/GRaZzbv" target="blank">Psedo-Element</a><br>
-                    <a href="https://chrispinsteve.github.io/wdd230/week04/tablebuilt.html" target="blank"></a>
+                    <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON Data</a>
                     <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank"></a>
                 </li>
             </ul>
