--- a/form.html
+++ b/form.html
@@ -42,8 +42,7 @@
                 <input type="password" name="password" id="pass2" required placeholder="Confirm Password">
 
                 <label for="email">Email*</label>
-                <input type="email" name="Email" id="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$"
-                    placeholder="chrispin@gmail.com">
+                <input type="email" name="Email" id="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" placeholder="example@byui.edu">
             </fieldset>
 
             <label for="r">Range</label>
