--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Steve Chrispin">
+    <meta name="description" content="Porphets">
+    <title>Prophets</title>
+    <link rel="stylesheet" href="styles/prophets.css">
+</head>
+<body>
+    <header>
+        <h1>Latter-day Prophets</h1>
+      </header>
+      <main>
+        <div id="cards"></div>
+      </main>
+      <footer>
+        [Enter Your Name Here] | Latter-day Prophets
+      </footer>
+</body>
+</html>
