--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Steve Chrispin">
-    <meta name="description" content="Porphets">
+    <meta name="description" content="Latter-day saints Prophets">
     <title>Prophets</title>
     <link rel="stylesheet" href="styles/prophets.css">
 </head>
@@ -16,7 +16,7 @@
         <div id="cards"></div>
       </main>
       <footer>
-        [Enter Your Name Here] | Latter-day Prophets
+        Steve Chrispin | Latter-day Prophets
       </footer>
 </body>
 </html>
