--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -18,5 +18,6 @@
       <footer>
         Steve Chrispin | Latter-day Prophets
       </footer>
+      <script src="scripts/prophets.js"></script>
 </body>
 </html>
