--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
 
                 <li>
                     Week 05: <a href="https://codepen.io/Chrispinsteve/pen/GRaZzbv" target="blank">Psedo-Element</a><br>
-<<<<<<< HEAD
+
                     <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON DATA</a>
-=======
+
                     <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON DATA</a>
->>>>>>> c62b11fa75e46db3741febe16e8952ca84d7ebac
-                    <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank"></a>
+
+                    <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank">Form</a>
+                    <a href="week05/prophets.html" target="blank">Latter-day Prophets</a>
                 </li>
             </ul>
         </section>
