--- a/week05/weather.html
+++ b/week05/weather.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather</title>
 </head>
 <body>
-    
+    <h1>OpenWeather.org API Test</h1>
+
+    <main>
+        <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
+    </main>
+
+
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
