--- a/week05/weather.html
+++ b/week05/weather.html
@@ -6,13 +6,17 @@
     <title>Weather</title>
 </head>
 <body>
-    <h1>OpenWeather.org API Test</h1>
+    <h1>OpenWeatherMap.org API Test</h1>
 
     <main>
         <p>The current temperature in Trier, Germany is <span id="current-temp"></span></p>
+        <figure>
+            <img id="weather-icon" src="" alt="">
+            <figcaption></figcaption>
+        </figure>
     </main>
 
-
+    <footer>Steve Chrispin | OpenWeatherMap.org | CC BY-SA 4.0</footer>
     <script src="scripts/weather.js"></script>
 </body>
 </html>
