--- a/index.html
+++ b/index.html
@@ -84,12 +84,11 @@
                 <li>
                     Week 05: <a href="https://codepen.io/Chrispinsteve/pen/GRaZzbv" target="blank">Psedo-Element</a><br>
 
-                    <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON DATA</a>
+                    <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON DATA<br></a>
 
-                    <a href="https://github.com/Chrispinsteve/wdd230/blob/main/week05/new-ward-members.json" target="blank">JSON DATA</a>
-
-                    <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank">Form</a>
-                    <a href="week05/prophets.html" target="blank">Latter-day Prophets</a>
+                    <a href="https://chrispinsteve.github.io/wdd230/week04/form-start/Form-start/" target="blank">Form<br></a>
+                    <a href="week05/prophets.html" target="blank">Latter-day Prophets<br></a>
+                    <a href="week05/weather.html" target="blank">Weather<br></a>
                 </li>
             </ul>
         </section>
