--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <section class="card">
             <h2>Information</h2>
-            <p>Weather: </p>
+            <p id="current-temp">Weather: </p>
             <p><span class="label">Number Of visits: </span>
                 <span class="visits"></span>
             </p>
