--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <script src="scripts/menuButton.js"></script>
     <script src="scripts/getDates.js"></script>
-    <script src="scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
