--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steve CHRISPIN - WDD 230 - Web Frontend Development</title>
-    <meta name="description"
-        content="Steve CHRISPIN - WDD 230 - Web Frontend Development course assignment portal. Hover and Wayfinding Lab. Profile Photo Lab">
+    <meta name="description" content="Steve CHRISPIN - WDD 230 - Web Frontend Development course assignment portal. Hover and Wayfinding Lab. Profile Photo Lab">
     <meta name="author" content="Steve Chrispin">
-    <!--meta Open Graph-->
     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/images/house.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
@@ -60,7 +54,7 @@
             <h2>Information</h2>
             <p id="current-temp">Weather: </p>
             <figure>
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon" src="images/placeholder.png" alt="Weather icon">
                 <figcaption></figcaption>
             </figure>
             <p><span class="label">Number Of visits: </span><span class="visits"></span></p>
