--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -33,9 +33,9 @@
         <button id="menu"></button>
         <nav class="navalist">
             <a href="#">Home</a>
-            <a href="discover.html">Discover</a>
-            <a href="directory.html">Directory</a>
-            <a href="join.html">Join</a>
+            <a href="#">Discover</a>
+            <a href="#">Directory</a>
+            <a href="#">Join</a>
             <div id="mode">
                 🌙
             </div>
