--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
         <nav class="navalist">
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
-            <a href="#">Directory</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
             <div id="mode">🌙</div>
         </nav>
