--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
         <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
