--- a/chamber/join.html
+++ b/chamber/join.html
@@ -34,7 +34,9 @@
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <div id="mode">🌙</div>
+            <div id="mode">
+                🌙
+            </div>
         </nav>
     </header>
 
