--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,10 +32,10 @@
         <img src="images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
-            <a href="#">Home</a>
-            <a href="#">Discover</a>
-            <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <a href="index.html">Home</a>
+            <a href="discover.html">Discover</a>
+            <a href="directory.html">Directory</a>
+            <a href="join.html">Join</a>
             <div id="mode">
                 🌙
             </div>
