--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IBUSINESS Chamber of Commerce</title>
-    <meta name="description" content=" I-Business Commerce chamber Site Plan">
+    <title>Directory IBUSINESS Chamber of Commerce</title>
+    <meta name="description" content="Directory I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
     <!--meta Open Graph-->
