--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -56,14 +56,9 @@
             <section class="content-1">
                 <h3 id="title">Haiti Bank</h3>
                 <img src="images/sogebank.webp" alt="" width="300">
-                <article>
-                    <h3>SOGEBANK</h3>
-                    <p>Société Générale Haïtienne de Banque, S.A.<br> 
-                        (Sogebank) is a Haitian bank. It is one of<br> 
-                        four private banks, along with Unibank,
-                        Capital Bank and Banque de l'Union haïtienne, 
-                        and one of the three largest<br> banks in the 
-                        Haitian banking sector.</p>
+                <article class="member">
+                    <h3></h3>
+    
                 </article>
             </section>
 
