--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -56,13 +56,13 @@
             <h1>Port-au-Prince Chamber of Commerce</h1>
             <section class="content-1">
                 <h3 id="title">Haiti Bank</h3>
-                <img src="images/sogebank.webp" alt="" width="300">
+                <img id="image-main" src="images/placeholder.png" alt="image main" width="300">
                 <article class="member">
                     <h3></h3>
     
                 </article>
             </section>
-            
+
         </main>
     </div>
 
