--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,15 +17,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="icon" type="img/png" href="images/ibusinessicon.png">
 </head>
-
 <body>
     <header>
         <img src="images/i-business.webp" alt="I-BUSINESS Logo">
@@ -36,41 +32,31 @@
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <div id="mode">
-                🌙
-            </div>
+            <div id="mode">🌙</div>
         </nav>
     </header>
 
     <div class="general">
-
         <div class="left-side">
             <a href="">Membership</a>
             <a href="">News</a>
-
             <a href="">Events</a>
         </div>
 
         <main class="right-side">
-            
             <h1>Port-au-Prince Chamber of Commerce</h1>
-            <section class="content-1">
-           
-            </section>
-
+            <section class="content-1"></section>
         </main>
     </div>
 
     <footer>
         <a href="#" class="cta-link">Join Us Today</a>
-        <span id="date"></span> 
-        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399
-        I-Business Commerce Chamber - wdd 230
+        <span id="date"></span>
+        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399 I-Business Commerce Chamber - wdd 230
         <p id="lastModified"></p>
     </footer>
 
     <script src="scripts/chamber.js"></script>
     <script src="scripts/members.js"></script>
 </body>
-
 </html>
