--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,21 +7,24 @@
     <meta name="description" content="Directory I-Business Commerce chamber Site Plan">
     <meta name="author" content="Steve Chrispin">
 
-    <!--meta Open Graph-->
+    <!-- Meta Open Graph -->
     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
 
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <!-- CSS Files -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" type="img/png" href="images/ibusinessicon.png">
+    <link rel="icon" type="image/png" href="images/ibusinessicon.png">
 </head>
 <body>
     <header>
@@ -45,14 +48,15 @@
 
         <main class="right-side">
             <h1>Port-au-Prince Chamber of Commerce</h1>
-            <section class="content-1"></section>
+            <button id="toggleView">Toggle View</button>
+            <section class="content-1 grid-view"></section>
         </main>
     </div>
 
     <footer>
         <a href="#" class="cta-link">Join Us Today</a>
         <span id="date"></span>
-        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399 I-Business Commerce Chamber - wdd 230
+        <br>&copy;2024 Steve Chrispin - Tel: 509 5537-399 I-Business Commerce Chamber - wdd 230
         <p id="lastModified"></p>
     </footer>
 
