--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,17 +14,14 @@
     <meta property="og:description" content="Assignment portal">
     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
 
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
-    <!-- CSS Files -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" type="image/png" href="images/ibusinessicon.png">
+    <link rel="icon" type="img/png" href="images/ibusinessicon.png">
 </head>
 <body>
     <header>
@@ -49,14 +46,14 @@
         <main class="right-side">
             <h1>Port-au-Prince Chamber of Commerce</h1>
             <button id="toggleView">Toggle View</button>
-            <section class="content-1 grid-view"></section>
+            <section class="content-1 grid"></section>
         </main>
     </div>
 
     <footer>
         <a href="#" class="cta-link">Join Us Today</a>
         <span id="date"></span>
-        <br>&copy;2024 Steve Chrispin - Tel: 509 5537-399 I-Business Commerce Chamber - wdd 230
+        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399 I-Business Commerce Chamber - wdd 230
         <p id="lastModified"></p>
     </footer>
 
