--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -51,6 +51,7 @@
 
         <main class="right-side">
             <h1>Port-au-Prince Chamber of Commerce</h1>
+            <button id="toggleView">Toggle View</button>
             <section class="content-1"></section>
         </main>
     </div>
