--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d121048.04380827247!2d-72.302592!3d18.5401344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sht!4v1715494183917!5m2!1sfr!2sht"
-        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+        width="400" height="300" id="map"  style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
     <footer>
         <p>&copy; <span id="date"></span> | Steve Chrispin | Haiti</p>
         <p id="lastModified"></p>
