--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
     <button id="menu"></button>
     <nav class="navalist">
-        <a href="#">Home</a>
-        <a href="#">Chamber</a>
+        <a href="index.html">Home</a>
+        <a href="chamber/index.html">Chamber</a>
         <a href="#">Site Plan</a>
-        <a href="#">Form</a>
+        <a href="form.html">Form</a>
     </nav>
 
     <main>
