--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navalist">
         <a href="index.html">Home</a>
         <a href="chamber/index.html">Chamber</a>
-        <a href="#">Site Plan</a>
+        <a href="spotlight.html">Spotlight</a>
         <a href="form.html">Form</a>
     </nav>
 
