--- a/spotlight.html
+++ b/spotlight.html
@@ -1,11 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotlight IBusinesss Commerce Chamber</title>
+    <title> Spotlight IBUSINESS Chamber of Commerce</title>
+    <meta name="description" content=" I-Business Commerce chamber Site Plan">
+    <meta name="author" content="Steve Chrispin">
+
+    <!--meta Open Graph-->
+    <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
+    <meta property="og:description" content="Assignment portal">
+    <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" type="img/png" href="images/ibusinessicon.png">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
+        <button id="menu"></button>
+        <nav class="navalist">
+            <a href="https://chrispinsteve.github.io/wdd230/">Back</a>
+            <a href="index.html">Home</a>
+            <a href="discover.html">Discover</a>
+            <a href="directory.html">Directory</a>
+            <a href="join.html">Join</a>
+            <div id="mode">
+                🌙
+            </div>
+        </nav>
+    </header>
+
+    <div class="general">
+
+        <div class="left-side">
+            <a href="">Membership</a>
+            <a href="">News</a>
+
+            <a href="">Events</a>
+        </div>
+
+        <main class="right-side">
+            <h1>Port-au-Prince Chamber of Commerce</h1>
+            <section class="content-1">
+                <h3 id="title">Haiti Bank</h3>
+                <img src="images/sogebank.webp" alt="" width="300">
+                <article>
+                    <h3>SOGEBANK</h3>
+                    <p>Société Générale Haïtienne de Banque, S.A.<br> 
+                        (Sogebank) is a Haitian bank. It is one of<br> 
+                        four private banks, along with Unibank,
+                        Capital Bank and Banque de l'Union haïtienne, 
+                        and one of the three largest<br> banks in the 
+                        Haitian banking sector.</p>
+                </article>
+            </section>
+
+            <section class="content-2">
+                <h3>Overview</h3>
+                <img src="images/i-business.png" alt="" width="300">
+                <article>
+                    <h3>Purpose of the Site</h3>
+                    <p>The site aims to support local businesses and promote the I Business <br>community.
+                        The primary goals are as follows:<br>
+
+                        Provide resources and services to member businesses.<br>
+                        Offer information on Chamber events and networking opportunities.</p>
+                </article>
+            </section>
+
+            <section class="content-3">
+                <h3>Overview</h3>
+                <img src="images/i-business.png" alt="" width="300">
+                <article>
+                    <h3>Purpose of the Site</h3>
+                    <p>The site aims to support local businesses and promote the I Business <br>community.
+                        The primary goals are as follows:<br>
+
+                        Provide resources and services to member businesses.<br>
+                        Offer information on Chamber events and networking opportunities.</p>
+                </article>
+            </section>
+
+            <section class="event">
+                <h3>Events</h3>
+                <article>
+                    <h3>13th WTO Ministerial Conference in Abu Dhabi</h3>
+                    <p>Minister Saint-Jean's intervention at the Ministerial<br> 
+                        Conference of the LDC Group prior to the 13th LDC Conference<br>
+                        WTO Ministerial Conference in Abu Dhabi at the end of February<br> 
+                        2024. Home First of all, I would like to salute the Chairman of<br> 
+                        the group, His Excellency the Minister of Trade and Tourism of<br> 
+                        Djibouti
+                    </p>
+                </article>
+            </section>
+
+            <section class="weather">
+                <h3>Weather</h3>
+                <img src="images/weather.png" alt="" width="300">
+                <article>
+                    <h3>Port-au-Prince 32 / 23 °C</h3>
+                    <p>Port-au-Prince Extended Forecast with high and low temperatures <br>
+                        Showers early, then partly cloudy overnight. Low 77F.<br>
+                        Winds light and variable. Chance of rain 50%
+
+                        Provide resources and services to member businesses.<br>
+                        Offer information on Chamber events and networking opportunities.</p>
+                </article>
+            </section>
+        </main>
+    </div>
+
+    <footer>
+        <a href="#" class="cta-link">Join Us Today</a>
+        <span id="date"></span> 
+        <br>&copy;2024 Steve Chrispin - Tel : 509 5537-399
+        I-Business Commerce Chamber - wdd 230
+        <p id="lastModified"></p>
+    </footer>
+
+    <script src="scripts/chamber.js"></script>
 </body>
+
 </html>
