--- a/spotlight.html
+++ b/spotlight.html
@@ -22,8 +22,8 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/larger.css">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="chamber/styles/larger.css">
+    <link rel="stylesheet" href="chamber/styles/base.css">
     <link rel="icon" type="img/png" href="images/ibusinessicon.png">
 </head>
 
