--- a/spotlight.html
+++ b/spotlight.html
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <img src="images/i-business.webp" alt="I-BUSINESS Logo">
+        <img src="chamber/images/i-business.webp" alt="I-BUSINESS Logo">
         <button id="menu"></button>
         <nav class="navalist">
             <a href="https://chrispinsteve.github.io/wdd230/">Back</a>
