--- a/spotlight.html
+++ b/spotlight.html
@@ -53,74 +53,7 @@
         </div>
 
         <main class="right-side">
-            <h1>Port-au-Prince Chamber of Commerce</h1>
-            <section class="content-1">
-                <h3 id="title">Haiti Bank</h3>
-                <img src="images/sogebank.webp" alt="" width="300">
-                <article>
-                    <h3>SOGEBANK</h3>
-                    <p>Société Générale Haïtienne de Banque, S.A.<br> 
-                        (Sogebank) is a Haitian bank. It is one of<br> 
-                        four private banks, along with Unibank,
-                        Capital Bank and Banque de l'Union haïtienne, 
-                        and one of the three largest<br> banks in the 
-                        Haitian banking sector.</p>
-                </article>
-            </section>
-
-            <section class="content-2">
-                <h3>Overview</h3>
-                <img src="images/i-business.png" alt="" width="300">
-                <article>
-                    <h3>Purpose of the Site</h3>
-                    <p>The site aims to support local businesses and promote the I Business <br>community.
-                        The primary goals are as follows:<br>
-
-                        Provide resources and services to member businesses.<br>
-                        Offer information on Chamber events and networking opportunities.</p>
-                </article>
-            </section>
-
-            <section class="content-3">
-                <h3>Overview</h3>
-                <img src="images/i-business.png" alt="" width="300">
-                <article>
-                    <h3>Purpose of the Site</h3>
-                    <p>The site aims to support local businesses and promote the I Business <br>community.
-                        The primary goals are as follows:<br>
-
-                        Provide resources and services to member businesses.<br>
-                        Offer information on Chamber events and networking opportunities.</p>
-                </article>
-            </section>
-
-            <section class="event">
-                <h3>Events</h3>
-                <article>
-                    <h3>13th WTO Ministerial Conference in Abu Dhabi</h3>
-                    <p>Minister Saint-Jean's intervention at the Ministerial<br> 
-                        Conference of the LDC Group prior to the 13th LDC Conference<br>
-                        WTO Ministerial Conference in Abu Dhabi at the end of February<br> 
-                        2024. Home First of all, I would like to salute the Chairman of<br> 
-                        the group, His Excellency the Minister of Trade and Tourism of<br> 
-                        Djibouti
-                    </p>
-                </article>
-            </section>
-
-            <section class="weather">
-                <h3>Weather</h3>
-                <img src="images/weather.png" alt="" width="300">
-                <article>
-                    <h3>Port-au-Prince 32 / 23 °C</h3>
-                    <p>Port-au-Prince Extended Forecast with high and low temperatures <br>
-                        Showers early, then partly cloudy overnight. Low 77F.<br>
-                        Winds light and variable. Chance of rain 50%
-
-                        Provide resources and services to member businesses.<br>
-                        Offer information on Chamber events and networking opportunities.</p>
-                </article>
-            </section>
+            <section id="spotlight-section" class="spotlight"> <!-- Content -->  </section>
         </main>
     </div>
 
