--- a/spotlight.html
+++ b/spotlight.html
@@ -65,7 +65,7 @@
         <p id="lastModified"></p>
     </footer>
 
-    <script src="scripts/chamber.js"></script>
+    <script src="chamber/scripts/chamber.js"></script>
 </body>
 
 </html>
