--- a/spotlight.html
+++ b/spotlight.html
@@ -53,7 +53,9 @@
         </div>
 
         <main class="right-side">
-            <section id="spotlight-section" class="spotlight"> <!-- Content -->  </section>
+            <section id="spotlight-section" class="spotlight"> 
+                <!-- Content -->  
+            </section>
         </main>
     </div>
 
@@ -66,6 +68,7 @@
     </footer>
 
     <script src="chamber/scripts/chamber.js"></script>
+    <script src="scripts/spotlight.js"></script>
 </body>
 
 </html>
