--- a/spotlight.html
+++ b/spotlight.html
@@ -33,10 +33,10 @@
         <button id="menu"></button>
         <nav class="navalist">
             <a href="https://chrispinsteve.github.io/wdd230/">Back</a>
-            <a href="index.html">Home</a>
-            <a href="discover.html">Discover</a>
-            <a href="directory.html">Directory</a>
-            <a href="join.html">Join</a>
+            <a href="chamber/index.html">Home</a>
+            <a href="chamber/discover.html">Discover</a>
+            <a href="chamber/directory.html">Directory</a>
+            <a href="chamber/join.html">Join</a>
             <div id="mode">
                 🌙
             </div>
