--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <img src="images/logo-Ahfadem.webp" alt="Logo Ahfadem" width="200"> <!-- Alt text for accessibility -->
-
+        <button id="menu"></button>
         <ul class="navlist">
             <li><a href="ahfadem.html">Accueil</a></li> <!-- Changed "Home" to "Accueil" -->
             <li><a href="#">Réalisations</a></li> <!-- Translated "Achievements" -->
@@ -41,7 +41,7 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h3>Votre Support compte</h3>
+            <h3>Association haitienne aux familles demunies</h3>
             <p><strong>Ahfadem a pour objectif principal de lutter contre la pauvreté. Nous soutenons les familles
                     pauvres, et les enfants dans leur éducation.</strong></p>
             <a href="don.html" class="ctaa">
