--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -29,7 +29,7 @@
         <img src="images/logo-Ahfadem.webp" alt="Logo Ahfadem" width="200"> <!-- Alt text for accessibility -->
         <button id="menu"></button>
         <ul class="navlist">
-            <li><a href="ahfadem.html">Accueil</a></li> <!-- Changed "Home" to "Accueil" -->
+            <li><a href="index.html">Accueil</a></li> <!-- Changed "Home" to "Accueil" -->
             <li><a href="#">Réalisations</a></li> <!-- Translated "Achievements" -->
             <li><a href="about.html">À propos de nous</a></li> <!-- Translated "About us" -->
             <li class="join-button">
