--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahfadem | about</title>
+    <title>Ahfadem</title>
     <!--Custom Link-->
     <link rel="stylesheet" type="text/css" href="styles/larger.css">
 
