--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahfadem</title>
+
+     <!--meta Open Graph-->
+     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
+     <meta property="og:type" content="website">
+     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
+     <meta property="og:description" content="Assignment portal">
+     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
+
+
     <!--Custom Link-->
     <link rel="stylesheet" type="text/css" href="styles/larger.css">
 
