--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -11,7 +11,7 @@
      <meta property="og:type" content="website">
      <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
      <meta property="og:description" content="Assignment portal">
-     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/chamber/images/i-business.png">
+     <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/ahfadem/images/haitian-children.webp">
 
 
     <!--Custom Link-->
