--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahfadem</title>
+    <meta name="description" content="Association hatienne d'aides aux famillles demunies">
+    <meta name="author" content="Steve Chrispin">
 
      <!--meta Open Graph-->
-     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/">
+     <meta property="og:url" content="https://chrispinsteve.github.io/wdd230/ahfadem">
      <meta property="og:type" content="website">
-     <meta property="og:title" content="Steve CHRISPIN - WDD 230 - Web Frontend Development">
+     <meta property="og:title" content="Steve CHRISPIN - Ahfadem - WDD 230 - Web Frontend Development">
      <meta property="og:description" content="Assignment portal">
      <meta property="og:image" content="https://chrispinsteve.github.io/wdd230/ahfadem/images/haitian-children.webp">
 
