--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -52,7 +52,7 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h3>Association haitienne aux familles demunies</h3>
+            <h3>Association haitienne d'aide aux familles demunies</h3>
             <p><strong>Ahfadem a pour objectif principal de lutter contre la pauvreté. Nous soutenons les familles
                     pauvres, et les enfants dans leur éducation.</strong></p>
             <a href="don.html" class="ctaa">
