--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -56,7 +56,7 @@
             <p><strong>Ahfadem a pour objectif principal de lutter contre la pauvreté. Nous soutenons les familles
                     pauvres, et les enfants dans leur éducation.</strong></p>
             <a href="don.html" class="ctaa">
-                <strong>Devenir Donateur(trice)</strong>
+                <strong>Faire un don</strong>
             </a>
         </div>
 
