--- a/ahfadem/index.html
+++ b/ahfadem/index.html
@@ -207,12 +207,9 @@
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="ahfadem.html">Accueil</a></li> <!-- Changed "Home" to "Accueil" -->
-                    <li><a href="#">Réalisations</a></li> <!-- Translated "Achievements" -->
-                    <li><a href="about.html">À propos de nous</a></li> <!-- Translated "About us" -->
-                    <li><a href="#">infos</a></li>
-                </ul>
+                <a href="index.html">Accueil</a>
+                <a href="realisation">Réalisations</a>
+                <a href="about.html">À propos de nous</a>
             </div>
             <div class="footer-section">
                 <h3>infos Information</h3>
