--- a/ahfadem/don.html
+++ b/ahfadem/don.html
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img src="images/logo-Ahfadem.webp" alt="Logo Ahfadem" width="200" height="65">
+        <img src="images/logo-ahfadem.webp" alt="Logo Ahfadem" width="200" height="65">
         <button id="menu"></button>
         <nav class="navlist">
             <a href="index.html">Accueil</a></li>
