--- a/ahfadem/about.html
+++ b/ahfadem/about.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <img src="images/logo-Ahfadem.webp" alt="Logo Ahfadem" width="200" height="60">
+        <img src="images/logo-ahfadem.webp" alt="Logo Ahfadem" width="200" height="60">
         <button id="menu"></button>
         <nav class="navlist">
             <a href="index.html">Accueil</a></li>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="hero-img">
-            <img id="col1" src="images/Ahfadem/Ahfadem/timoun.webp" alt="" width="550" style="
+            <img id="col1" src="images/ahfadem/ahfadem/timoun.webp" alt="" width="550" style="
             border-radius: 5%; 
             margin-left: 5%;
             margin-bottom: 8%;">
@@ -95,15 +95,15 @@
 
         <div id="adventure">
             <figure class="img1">
-                <img src="images/Ahfadem/Ahfadem/citadelle2.webp" alt="White Water Rafting 1" width="250" style="border-radius: 8%;
+                <img src="images/ahfadem/ahfadem/citadelle2.webp" alt="White Water Rafting 1" width="250" style="border-radius: 8%;
                 box-shadow: 0 0 8px rgb(139, 138, 138);">
             </figure>
             <figure class="img3">
-                <img src="images/Ahfadem/Ahfadem/cita2.webp" alt="White Water Rafting 3" width="220" style="border-radius: 8%;
+                <img src="images/ahfadem/ahfadem/cita2.webp" alt="White Water Rafting 3" width="220" style="border-radius: 8%;
                 box-shadow: 0 0 8px rgb(139, 138, 138);">
             </figure>
             <figure class="img5">
-                <img src="images/Ahfadem/Ahfadem/plage.webp" alt="White Water Rafting 5" width="255" style="border-radius: 13%;
+                <img src="images/ahfadem/ahfadem/plage.webp" alt="White Water Rafting 5" width="255" style="border-radius: 13%;
                 box-shadow: 0 0 8px rgb(139, 138, 138);">
             </figure>
         </div>
