--- a/ahfadem/infos.html
+++ b/ahfadem/infos.html
@@ -35,12 +35,10 @@
         <img src="images/logo-ahfadem.webp" alt="Logo Ahfadem" width="200" height="65">
         <button id="menu"></button>
         <nav class="navlist">
-            <a href="index.html">Accueil</a></li>
-            <a href="realisation">Réalisations</a></li>
-            <a href="about.html">À propos de nous</a></li>
-            <a class="join-button">
-                <button onclick="window.location.href='don.html'">Rejoindre Ahfadem</button>
-            </a>
+            <a href="index.html">Accueil</a>
+            <a href="realisation.html">Réalisations</a>
+            <a href="about.html">À propos de nous</a>
+            <a href="don.html" class="join-button">Rejoindre Ahfadem</a>
         </nav>
     </header>
 
@@ -96,15 +94,15 @@
 
        <div id="adventure">
         <figure class="img1">
-            <img src="images/ahfadem/ahfadem/citadelle2.webp" alt="White Water Rafting 1" width="250" style="border-radius: 8%;
+            <img src="images/Ahfadem/Ahfadem/citadelle2.webp" alt="White Water Rafting 1" width="250" style="border-radius: 8%;
             box-shadow: 0 0 8px rgb(139, 138, 138);">
         </figure>
         <figure class="img3">
-            <img src="images/ahfadem/ahfadem/cita2.webp" alt="White Water Rafting 3" width="220" style="border-radius: 8%;
+            <img src="images/Ahfadem/Ahfadem/cita2.webp" alt="White Water Rafting 3" width="220" style="border-radius: 8%;
             box-shadow: 0 0 8px rgb(139, 138, 138);">
         </figure>
         <figure class="img5">
-            <img src="images/ahfadem/ahfadem/plage.webp" alt="White Water Rafting 5" width="255" style="border-radius: 13%;
+            <img src="images/Ahfadem/Ahfadem/plage.webp" alt="White Water Rafting 5" width="255" style="border-radius: 13%;
             box-shadow: 0 0 8px rgb(139, 138, 138);">
         </figure>
     </div>
@@ -126,9 +124,9 @@
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="ahfadem.html">Accueil</a></li>
-                    <li><a href="#">Réalisations</a></li>
+                    <li><a href="realisation.html">Réalisations</a></li>
                     <li><a href="about.html">À propos de nous</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="don.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-section">
